# t8code

./: .gitignore  Makefile.am
.github/workflows/: tests_sc_p4est.yml
example/: Makefile.am
example/common/: t8_example_common.cxx  t8_example_common.h  t8_example_common_functions.cxx
example/transition/: Makefile.am  t8_advection_transition.cxx  t8_transition_basic_hex.cxx  t8_transition_basic_hex_test.cxx  t8_transition_basic_hex_test2.cxx  t8_transition_basic_hex_test_LFN.cxx  t8_transition_basic_hex_test_advection_transition.cxx  t8_transition_basic_hex_volume.cxx  t8_transition_global _hex.cxx  t8_transition_global.cxx  t8_transition_global_hex.cxx  t8_transition_local.cxx
src/: Makefile.am  t8_element_c_interface.cxx  t8_element_c_interface.h  t8_element_cxx.hxx
src/t8_forest/: t8_forest.c  t8_forest_adapt.cxx  t8_forest_balance.cxx  t8_forest_cxx.cxx  t8_forest_general.h  t8_forest_ghost.cxx  t8_forest_iterate.cxx  t8_forest_partition.cxx  t8_forest_transition.cxx  t8_forest_types.h
src/t8_schemes/t8_default/t8_default_common/: t8_default_common_cxx.cxx  t8_default_common_cxx.hxx
src/t8_schemes/t8_transition/t8_transition_conformal_hex/: t8_transition_conformal_hex.cxx  t8_transition_conformal_hex_cxx.cxx  t8_transition_conformal_hex_cxx.hxx
src/t8_schemes/t8_transition/t8_transition_conformal_quad/: t8_transition_conformal_hex.cxx  t8_transition_conformal_hex_cxx .hxx  t8_transition_conformal_hex_cxx.cxx  t8_transition_conformal_quad_cxx.cxx  t8_transition_conformal_quad_cxx.hxx
test/: Makefile.am
test/t8_forest/: t8_gtest_transition_3D.cxx
