# This file is part of t8code
# Non-recursive Makefile.am in example/transition
# Included from toplevel directory

bin_PROGRAMS += \
	example/transition/t8_transition_global \
	example/transition/t8_transition_local \
	example/transition/t8_advection_transition \
	example/transition/t8_transition_basic_hex \
	example/transition/t8_transition_global_hex \
	example/transition/t8_transition_basic_hex_test \
	example/transition/t8_transition_basic_hex_volume \


example_transition_t8_transition_global_SOURCES = example/transition/t8_transition_global.cxx
example_transition_t8_transition_local_SOURCES = example/transition/t8_transition_local.cxx
example_transition_t8_advection_transition_SOURCES = example/transition/t8_advection_transition.cxx
example_transition_t8_transition_basic_hex_SOURCES = example/transition/t8_transition_basic_hex.cxx
example_transition_t8_transition_global_hex_SOURCES = example/transition/t8_transition_global_hex.cxx
example_transition_t8_transition_basic_hex_test_SOURCES = example/transition/t8_transition_basic_hex_test.cxx
example_transition_t8_transition_basic_hex_volume_SOURCES = example/transition/t8_transition_basic_hex_volume.cxx

